exo/svc-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-mysql
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
