exo/svc-wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-wordpress
  namespace: dev
spec:
  selector:
    app: wordpress
  type: NodePort
  ports:
  - port: 9080
    targetPort: 80
    nodePort: 30090
